force-app/main/default/objects/Account/fields/Vendor_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Enquiry</label>
    <referenceTo>Vendor_Enquiry__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>