force-app/main/default/objects/Account/fields/Vendor_Enquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Enquiry_Id__c</fullName>
    <label>Vendor Enquiry Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>