force-app/main/default/objects/Account/fields/ZIP_Postal_Code_Bank__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Postal_Code_Bank__c</fullName>
    <label>ZIP / Postal Code (Bank)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>