force-app/main/default/objects/Account/validationRules/Annual_Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AnnualRevenue &lt;0</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Please enter a correct amount.</errorMessage>
</ValidationRule>