force-app/main/default/objects/Account/validationRules/Billing_and_Shipping_Address_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_and_Shipping_Address_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&apos;Vendor&apos;,
PRIORVALUE(Captured_through_Vendor_Enquiry__c) &lt;&gt; TRUE,
Captured_through_Vendor_Enquiry__c =FALSE,
OR( ISBLANK( BillingCity ) ,
ISBLANK( BillingCountry),
ISBLANK( BillingState ),
ISBLANK( BillingPostalCode ),
ISBLANK( BillingStreet ),
ISBLANK( ShippingCity ) ,
ISBLANK( ShippingCountry),
ISBLANK( ShippingState ),
ISBLANK( ShippingPostalCode),
ISBLANK( ShippingStreet )

)
)</errorConditionFormula>
    <errorMessage>Please check if Billing and Shipping addresses are captured correctly</errorMessage>
</ValidationRule>