force-app/main/default/objects/Account/validationRules/Date_of_Expiry_DD_should_not_be_past_da.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Expiry_DD_should_not_be_past_da</fullName>
    <active>true</active>
    <description>Date of Expiry (DD)</description>
    <errorConditionFormula>Date_of_Expiry_DD__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Expiry_DD__c</errorDisplayField>
    <errorMessage>Date of Expiry (DD) should not be a past date.</errorMessage>
</ValidationRule>