force-app/main/default/objects/Account/validationRules/Date_of_ExpiryDD_Mandatory_at_DD_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_ExpiryDD_Mandatory_at_DD_Stage</fullName>
    <active>false</active>
    <description>Date if expiry (DD) is mandatory if status is Due Diligence</description>
    <errorConditionFormula>AND( RecordType.DeveloperName ==&apos;Vendor&apos;,
 IsPickval( Status__c ,&apos;Due Diligence&apos;),
   ISNULL(Date_of_Expiry_DD__c) )</errorConditionFormula>
    <errorDisplayField>Date_of_Expiry_DD__c</errorDisplayField>
    <errorMessage>Please enter a date</errorMessage>
</ValidationRule>