force-app/main/default/objects/Account/validationRules/Date_of_Signature_NDA_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Signature_NDA_validation</fullName>
    <active>true</active>
    <description>Date of Signature (NDA) should not be a past date.</description>
    <errorConditionFormula>Date_of_Signature_NDA__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Signature_NDA__c</errorDisplayField>
    <errorMessage>Date of Signature (NDA) should not be a past date.</errorMessage>
</ValidationRule>