force-app/main/default/objects/Account/validationRules/Date_of_Signature_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Signature_validation</fullName>
    <active>true</active>
    <description>Date of Signature should be less than Date of Expiry</description>
    <errorConditionFormula>OR(
Date_of_Signature_MSA__c &gt; Date_of_Expiry_MSA__c ,
 Date_of_Signature_NDA__c &gt; Date_of_Expiry_NDA__c 
)</errorConditionFormula>
    <errorMessage>Date of Signature must be less than Date of Expiry (Applicable for both: NDA and MSA).</errorMessage>
</ValidationRule>