force-app/main/default/objects/Account/validationRules/File_type_Financial_Informati_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>File_type_Financial_Informati_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;Due Diligence&quot;),
  Financial_Informatio__c == False,
 ISPICKVAL(PRIORVALUE(Status__c ),&quot;VRF&quot;)
 )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please upload Financial Information file then go to Due Diligence stage.</errorMessage>
</ValidationRule>