force-app/main/default/objects/Account/validationRules/Is_Company_Awarded_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Company_Awarded_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Is_Company_Awarded__c == True,
 ISBLANK( Award_Details__c) 
)</errorConditionFormula>
    <errorDisplayField>Award_Details__c</errorDisplayField>
    <errorMessage>If Company is Awarded  then Award details is mandatory.</errorMessage>
</ValidationRule>