force-app/main/default/objects/Account/validationRules/Status_Initiation_to_NDA_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Initiation_to_NDA_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;NDA&quot;), 
 File_Type__c &lt;&gt; &quot;MOM&quot;,NOT( ISNEW() ),
ISPICKVAL(PRIORVALUE(Status__c ),&quot;Initiation&quot;)

 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Before going to NDA stage, you need to upload MOM file.</errorMessage>
</ValidationRule>