force-app/main/default/objects/Account/validationRules/Status_NDA_to_VRF_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_NDA_to_VRF_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;VRF&quot;),
 File_Type__c &lt;&gt; &quot;NDA&quot;,
 ISPICKVAL(PRIORVALUE(Status__c ),&quot;NDA&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please upload NDA file then go to Due Diligence stage.</errorMessage>
</ValidationRule>