force-app/main/default/objects/Account/validationRules/Status_Rejected_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Rejected_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Rejected&quot;),
TEXT(Approval_status__c)&lt;&gt; &apos;Pending&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&apos;t go to this stage manually.</errorMessage>
</ValidationRule>